@@ -25,8 +25,8 @@
 extern "C" {
 #endif
 
-#define LIBAVFORMAT_VERSION_INT ((50<<16)+(5<<8)+0)
-#define LIBAVFORMAT_VERSION     50.5.0
+#define LIBAVFORMAT_VERSION_INT ((50<<16)+(6<<8)+0)
+#define LIBAVFORMAT_VERSION     50.6.0
 #define LIBAVFORMAT_BUILD       LIBAVFORMAT_VERSION_INT
 
 #define LIBAVFORMAT_IDENT       "Lavf" AV_STRINGIFY(LIBAVFORMAT_VERSION)
